Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://rsms.me/">
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <div class="top_menu">
+            <h1>Themebau.</h1>
+            <div class="nav">
+                <h1>home </h1>
+                <h1>projects</h1>
+                <h1> pages</h1>
+                <h1> contact</h1>
+            </div>
+            <div class="social_header">
+                <img class="facebook" src="">
+                <img class="twitter" src="">
+                <img class="inst" src="">
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
