--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
 
 <body>
 
-    <div class="container">
-        <div class="top_menu">
-            <h1>Themebau.</h1>
-            <div class="nav">
-                <h1>home </h1>
-                <h1>projects</h1>
-                <h1> pages</h1>
-                <h1> contact</h1>
-            </div>
+    <div class="container1" style="background: #0E0E0E">
+        <header class="top_menu">
+            <h1 class="themebau">Themebau.</h1>
+            <div style="text-align: right; color: white; font-size: 16px; font-family: Inter; font-weight: 500;word-wrap: break-word"
+                class="nav">
+                home projects pages contact</div>
             <div class="social_header">
-                <img class="facebook" src="">
-                <img class="twitter" src="">
-                <img class="inst" src="">
+                <img class="social_icons" src="img/social_icons.png">
             </div>
+        </header>
+        <div class="image_calibri">
+            <img src="img/calibri.png">
         </div>
     </div>
 </body>
