идите нахуй тупые пидорасы

--- a/index.html
+++ b/index.html
@@ -6,26 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://rsms.me/">
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
 
 <body>
 
-    <div class="container1" style="background: #0E0E0E">
+    <section class="container1" style="background: #0E0E0E">
         <header class="top_menu">
             <h1 class="themebau">Themebau.</h1>
-            <div style="text-align: right; color: white; font-size: 16px; font-family: Inter; font-weight: 500;word-wrap: break-word"
-                class="nav">
-                home projects pages contact</div>
+            <div class="nav">
+                <div class="home">home</div>
+                <div class="projects">projects</div>
+                <div class="pages">pages</div>
+                <div class="contact">contact</div>
+            </div>
             <div class="social_header">
                 <img class="social_icons" src="img/social_icons.png">
             </div>
         </header>
         <div class="image_calibri">
-            <img src="img/calibri.png">
+            <img class="calibriline" src="img/line_1.png">
+            <p class="creativepr">Colibri Creative Project</p>
+            <div class="onetothree">
+                <div class="asd">
+                    <p class="oneto">01</p>
+                    <img src="img/line_1.png">
+                    <p class="tothree">03</p>
+                </div>
+                <img id="circleimg" src="img/cirlce.png">
+            </div>
         </div>
-    </div>
+    </section>
+    <section class="container2">
+
+    </section>
 </body>
 
 </html>
